# routes/index.js
@@ -7,7 +7,9 @@ router.get("/", (req, res) => {
 })
 
 router.use('/connection', require('./connection'))
+    //swagger tags = ['Friendship Connection']
 
 router.use('/books', require('./books'))
+    //swagger tags = ['Books']
 
 module.exports = router
